/*
 * LSST Data Management System
 *
 * This product includes software developed by the
 * LSST Project (http://www.lsst.org/).
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the LSST License Statement and
 * the GNU General Public License along with this program.  If not,
 * see <http://www.lsstcorp.org/LegalNotices/>.
 */
#ifndef LSST_QSERV_WBASE_TRANSMITDATA_H
#define LSST_QSERV_WBASE_TRANSMITDATA_H

// System headers
#include <atomic>
#include <memory>
#include <mutex>
#include <string>

// 3rd party headers
#include <mysql/mysql.h>

// Qserv headers
#include "proto/worker.pb.h"
#include "qmeta/types.h"

namespace google::protobuf {
class Arena;
}

namespace lsst::qserv::util {
class InstanceCount;
class MultiError;
}  // namespace lsst::qserv::util

namespace lsst::qserv::wbase {
class Task;
}

namespace lsst::qserv::xrdsvc {
class StreamBuffer;
}

namespace lsst::qserv::wbase {

/// This class is used to store information needed for one transmit.
/// The data may be for result rows or an error message.
class TransmitData {
public:
    using Ptr = std::shared_ptr<TransmitData>;

    TransmitData() = delete;
    TransmitData(TransmitData const&) = delete;
    TransmitData& operator=(TransmitData const&) = delete;

    /// Create a transmitData object
    static Ptr createTransmitData(qmeta::CzarId const& czarId_, std::string const& idStr);

    qmeta::CzarId getCzarId() const { return _czarId; }
    std::string getIdStr() const { return _idStr; }

    /// Initialize the result.
    void initResult(Task& task);

    /// @return a string representation of this transmit object's header
    ///         generated by protobufs.
    std::string getHeaderString();

    /// Attach the header for the next message to this message. If
    /// 'reallyLast' is true, this is the last transmit in the message, so
    /// a special header is attached.
    void attachNextHeader(TransmitData::Ptr const& nextTr, bool reallyLast);

    /// @return a StreamBuffer object containing what was in _dataMsg.
    /// Note: this function invalidates _dataMsg.
    std::shared_ptr<xrdsvc::StreamBuffer> getStreamBuffer(std::shared_ptr<Task> const& task);

    /// @return the protobuf string for the header.
    std::string makeHeaderString(bool reallyLast);

    /// Fill one row in the _result msg from one row in MYSQL_RES* 'mResult'
    /// If the message has gotten larger than the desired message size,
    /// return false.
    /// @return false if there ARE MORE ROWS left in mResult.
    ///         true if there are no more rows remaining in mResult.
    bool fillRows(MYSQL_RES* mResult, size_t& sz);

    /// Prepare the summary response by emptying the payload (rows) and setting
    /// the counters.
    /// @param task - the task responsible for the change
    /// @param rowcount - the total number of rows in a result set of a query
    /// @param transmitsize - teh total size (bytes) of a result set of a query
    void prepareResponse(Task const& task, uint32_t rowcount, uint64_t transmitsize);

    /// Use the information collected in _result and multiErr to build _dataMsg.
    void buildDataMsg(Task const& task, util::MultiError& multiErr);

    /// @return true if tData has an error message in _result.
    bool hasErrormsg() const;

    /// @return the size of the result (the 'transmitsize' of the result) in bytes.
    size_t getResultTransmitSize() const;

    /// @return the size of the result in bytes.
    int getResultSize() const;

    /// @return the number of rows in the result.
    int getResultRowCount() const;

    /// @return a log worthy description of this object.
    std::string dump() const;

    /// @return a copy of the data message
    std::string dataMsg() const;

private:
    TransmitData(qmeta::CzarId const& czarId, std::shared_ptr<google::protobuf::Arena> const& arena,
                 std::string const& idStr);

    /// @see TrasnmitData::buildDataMsg
    void _buildDataMsg(std::lock_guard<std::mutex> const& lock, Task const& task, util::MultiError& multiErr);

    /// Create a header for an empty result using our arena.
    /// This does not set the 'header' member of this object as there is a
    /// case where an empty header is needed to append to the result.
    /// This should only be appended to the result of this->result as
    /// the '_arena' will be deallocated when this object is destroyed.
    /// @param lock - on _trMtx must be held before calling this methid.
    proto::ProtoHeader* _createHeader(std::lock_guard<std::mutex> const& lock);

    /// @param lock - on _trMtx must be held before calling this methid.
    std::string _makeHeaderString(std::lock_guard<std::mutex> const& lock, bool reallyLast);

    /// @param lock - on _trMtx must be held before calling this methid.
    void _buildHeader(std::lock_guard<std::mutex> const& lock);

    /// @see dump()
    /// @param lock - on _trMtx must be held before calling this methid.
    std::string _dump(std::lock_guard<std::mutex> const& lock) const;

    /// Create a result using our arena.
    /// This does not set the 'result' member of this object for consistency.
    /// @param lock - on _trMtx must be held before calling this methid.
    proto::Result* _createResult(std::lock_guard<std::mutex> const& lock);

    // Input parameters
    qmeta::CzarId const _czarId;
    std::shared_ptr<google::protobuf::Arena> const _arena;
    std::string const _idStr;

    // Proto objects are instantiated as part of google protobuf arenas
    // and should not be deleted. They are deleted when the arena is deleted.
    proto::ProtoHeader* _header = nullptr;
    proto::Result* _result = nullptr;

    std::string _dataMsg;  ///< Serialized string for result that is appended with wrapped
                           /// string for headerNext.

    unsigned int _rowCount = 0;                   ///< Number of rows in the _result so far.
    size_t _tSize = 0;                            ///< Approximate number of bytes in the _result so far.
    int const _trSeq;                             ///< Identifier for this object, used for debugging.
    std::shared_ptr<util::InstanceCount> _icPtr;  // LockupDB

    mutable std::mutex _trMtx;  ///< Protects all private member variables.
};

}  // namespace lsst::qserv::wbase

#endif  // LSST_QSERV_WBASE_TRANSMITDATA_H
